added to about me section

--- a/index.html
+++ b/index.html
@@ -530,7 +530,9 @@
     <div class="about-text">
       <p class="section-label">Background</p>
       <h2>About Me</h2>
-      <p>Write a few sentences about who you are, your background, and what draws you to GIS work. What kinds of problems do you like solving? What environments or datasets do you gravitate toward?</p>
+      <p>I'm an early-career geospatial analyst with a background in American Studies, exploring how spatial data can support sustainability, climate resilience, and environmental justice.
+      <p>Through work with NASA DEVELOP and GWU research, I’ve used tools like ArcGIS Pro, QGIS, Python, and R to analyze remote sensing and LiDAR data for projects ranging from Arctic infrastructure to urban heat.</p>
+      <p>I'm especially interested in how spatial analysis can drive practical, equity-focused solutions. Always open to collaboration around environmental GIS, climate, and sustainability.</p>
       <p>This is also a good place to mention your education, relevant experience, or the tools and workflows you work with most.</p>
     </div>
     <div class="about-skills">
