--- a/index.html
+++ b/index.html
@@ -583,8 +583,8 @@
     <h2>Contact</h2>
     <p class="contact-intro">Interested in working together or have a question about my work?</p>
     <div class="contact-links">
-      <a href="mailto:your@email.com" class="contact-link">Email Me</a>
-      <a href="https://linkedin.com/in/yourprofile" target="_blank" class="contact-link outline">LinkedIn</a>
+      <a href="mailto:conor.doremus@gmail.com" class="contact-link">Email Me</a>
+      <a href="https://linkedin.com/in/conordoremus" target="_blank" class="contact-link outline">LinkedIn</a>
       <a href="https://github.com/conordoremus" target="_blank" class="contact-link outline">GitHub</a>
     </div>
   </section>
