Added Resume to index.html

--- a/index.html
+++ b/index.html
@@ -533,7 +533,6 @@
       <p>I'm an early-career geospatial analyst with a background in American Studies, exploring how spatial data can support sustainability, climate resilience, and environmental justice.
       <p>Through work with NASA DEVELOP and GWU research, I’ve used tools like ArcGIS Pro, QGIS, Python, and R to analyze remote sensing and LiDAR data for projects ranging from Arctic infrastructure to urban heat.</p>
       <p>I'm especially interested in how spatial analysis can drive practical, equity-focused solutions. Always open to collaboration around environmental GIS, climate, and sustainability.</p>
-      <p>This is also a good place to mention your education, relevant experience, or the tools and workflows you work with most.</p>
     </div>
     <div class="about-skills">
       <p class="section-label">Toolkit</p>
@@ -562,14 +561,7 @@
       <h2>Resume</h2>
     </div>
     <div class="resume-embed">
-      <!--
-        TO EMBED YOUR RESUME:
-        Option A — PDF file in your repo:
-          <iframe src="resume.pdf"></iframe>
-        Option B — Google Drive PDF:
-          Share the PDF, get the embed link, paste it below as src
-          <iframe src="YOUR_GOOGLE_DRIVE_EMBED_URL"></iframe>
-      -->
+          <iframe src="ConorDoremus_Resume.pdf"></iframe>
       <div class="resume-placeholder">
         <p>Resume goes here</p>
         <p>Replace this with an &lt;iframe&gt; linking to your PDF</p>
