--- a/index.html
+++ b/index.html
@@ -560,11 +560,8 @@
       <p class="section-label">CV</p>
       <h2>Resume</h2>
     </div>
-    <div class="resume-embed">
-          <iframe src="ConorDoremus_Resume.pdf"></iframe>
-      <div class="resume-placeholder">
-        <p>Resume goes here</p>
-        <p>Replace this with an &lt;iframe&gt; linking to your PDF</p>
+      <div class="resume-embed">
+          <iframe src="ConorDoremus_Resume.pdf"></iframe
       </div>
     </div>
   </section>
